# FaceDetectDatasetCreatation

./: .gitignore  .revise_main.cpp.swp  .show_main.cpp.swp  .video_main.cpp.swp  CMakeLists.txt  FaceFilter.cpp  FaceFilter.h  FacedetWithFilter.cpp  FacedetWithFilter.h  README.md  faceRegion.hpp  facefinder_pure.ea  main.cpp  picort.cpp  picort.h  revise_main.cpp  show_main.cpp  svm_b.xml  svm_b0913.xml  svm_w.xml  svm_w0913.xml  tags  video_main.cpp  xintai.xml
